--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-datetime==4.3
-holoviews==1.14.3
-hvplot==0.7.3
-matplotlib==3.5.1
-pandas==1.3.4
-prophet==1.0.1
-pyfolio==0.9.0
+datetime==5.3
+holoviews==1.18.1
+hvplot==0.9.0
+matplotlib==3.8.1
+pandas==1.5.3
+prophet 1.1.5
+pyfolio==0.9.2
 python-dateutil==2.8.2
-pystan==3.4.0
-scipy==1.7.3
-streamlit==1.14.0
-statsmodels
-yfinance==0.1.71
+pystan==3.7.0
+scipy==1.11.3
+streamlit==1.28.2
+statsmodels==0.14.0
+yfinance==0.2.31
