--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ holoviews==1.18.1
 hvplot==0.9.0
 matplotlib==3.8.1
 pandas==1.5.3
-prophet 1.1.5
+prophet==1.1.5
 pyfolio==0.9.2
 python-dateutil==2.8.2
 pystan==3.7.0
